<resources>
    <string name="app_name">ЖКХ Контроль</string>
    <string name="authHeader">Авторизация</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="confidential_policy">Согласен с политикой конфиденциальности</string>
    <string name="data_processing_policy">Согласен с обработкой данных</string>
    <string name="notifications_policy">Согласен с отправкой уведомлений</string>
    <string name="registration_button">Регистрация</string>
    <string name="login_button">Войти</string>
    <string name="location_is_not_available">Доступ к геолокации разрешен</string>
    <string name="location_permission_denied">Доступ к геолокации запрещен</string>
    <string name="inn_is_required">Требуется код плательщика!</string>
    <string name="invalid_email">Неверный e-mail</string>
    <string name="password_must_be_at_least_6_characters_long">Пароль должен иметь длину не менее 6 символов</string>
    <string name="balance">"Баланс: "</string>
    <string name="electricity">"Электроэнергия: "</string>
    <string name="cold_water">"ХВС: "</string>
    <string name="hot_water">"ГВС: "</string>
    <string name="deadline">"Крайний срок ввода показаний: "</string>
    <string name="not_enough_money">Недостаточно средств на балансе!</string>
    <string name="please_pay">Для оплаты задолженности ЖКХ не хватает средств на счёте! Пополните счёт в ближайшее время.</string>
    <string name="ok">ОК</string>
    <string name="payments_history">История платежей</string>
    <string name="payer_code">Код плательщика</string>
    <string name="top_up">Пополнение баланса</string>
    <string name="payment_sum">Сумма пополнения</string>
    <string name="back">Назад</string>
    <string name="pay">Пополнить</string>
    <string name="fio">Введите своё ФИО</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="middle_name">Отчество (при наличии)</string>
    <string name="next">Далее</string>
    <string name="address_input">Укажите свой адрес</string>
    <string name="enter_address">Введите адрес</string>
    <string name="enter_payer_code">Введите код налогоплательщика</string>
    <string name="settings">Настройки</string>
    <string name="account">Аккаунт</string>
    <string name="switch_account">Сменить аккаунт</string>
    <string name="exit">Выйти</string>
    <string name="support">Поддержка</string>
    <string name="date">Дата</string>
    <string name="sum">Сумма</string>
    <string name="home">Главная</string>
    <string name="history">История</string>
    <string name="date_filter">Отфильтровать по дате</string>
    <string name="edit_data">Введите показания</string>
    <string name="enter">Ввод</string>
    <string name="cancel">Отмена</string>
    <string name="heating">Отопление: </string>
    <string name="maintenance">Обслуживание: </string>
    <string name="something_went_wrong">Something went wrong: %1$s</string>
    <string name="registration_error">Ошибка при регистрации: %1$s</string>
    <string name="email_or_pwd_wrong">Почта или пароль неверны.  %1$s</string>
    <string name="balance_error">Ошибка при загрузке баланса: %1$s</string>
    <string name="unknown_type">Неизвестный тип данных!</string>
    <string name="data_loading_error">Ошибка при загрузке показаний: %1$s</string>
    <string name="payments_loading_error">Ошибка при загрузке платежей: %1$s</string>
    <string name="user_loading_error">Ошибка при загрузке пользователя: %1$s</string>
    <string name="successful_payment">Платёж успешный!</string>
    <string name="payment_error">Ошибка при платеже: %1$s</string>
    <string name="data_sent">Данные переданы!</string>
    <string name="data_sending_error">Ошибка при передаче данных: %1$s</string>
    <string name="same_readings_error">Показания не могут быть меньше предыдущих или такими же</string>
    <string name="data_hint">Для ввода показаний, заполните все поля новыми данными и нажмите на кнопку сохранить</string>
</resources>