<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <TextView
            android:id="@+id/accountText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/account"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <Button
            android:id="@+id/addAccountButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="center"
            android:padding="10sp"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/switch_account"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:gravity="center"
            android:padding="10sp"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/supportButton"
    style="@style/Widget.Material3.FloatingActionButton.Tertiary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_margin="10sp"
    android:contentDescription="@string/support"
    android:src="@mipmap/support"/>

</LinearLayout>