<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <TextView
            android:id="@+id/INNTw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payer_code"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="10sp"
            android:padding="10sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/balanceButton"
                style="@style/Widget.Material3.Button.TextButton"
                android:textAlignment="viewStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/balance"
                android:textSize="20sp"
                android:padding="20sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/BalanceIcon"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:visibility="gone"
                    app:icon="@mipmap/exclamation"/>

                <Button
                    android:id="@+id/refreshBalanceButton"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:icon="@mipmap/refresh"
                    />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/electricityText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/electricity"
                    android:textSize="20sp"
                    android:padding="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/editElectricityButton"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:icon="@mipmap/edit"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coldWaterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cold_water"
                    android:textSize="20sp"
                    android:padding="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/editColdWaterButton"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:icon="@mipmap/edit"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hotWaterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_water"
                    android:textSize="20sp"
                    android:padding="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/editHotWaterButton"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:icon="@mipmap/edit"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateAllButton"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Tertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        android:src="@mipmap/save"/>

</LinearLayout>